--- a/public/main.html
+++ b/public/main.html
@@ -22,8 +22,11 @@
             </div>
             <div class="card-body">
                 <form action="/signup" method="post">
-                    
-                    <button class="btn btn-outline-primary" type="submit">Log In</button>
+                    <div class="input-group mb-3">
+                        <label class="form-label">Name</label>
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                      </div>
+                    <button class="btn btn-outline-primary" type="submit">Register</button>
                 </form>
             </div>
         </div>
