--- a/public/main.html
+++ b/public/main.html
@@ -12,30 +12,66 @@
 
 <body>
 
-    <div class="logIn p-4 ms-auto me-auto">
-        <div class="ms-auto me-auto mb-3 fitContent">
-            <img src="./images/logo.png" alt="" srcset="">
-        </div>
-        <div class="card col-lg-6 col-md-8 ms-auto me-auto text-center">
-            <div class="card-header">
-                Sign In
+    <div class="col-lg-8 mx-auto p-3 py-md-5">
+        <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+            <img class="rounded-circle profilePic" src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt=""
+                    srcset="">
+
+        </header>
+
+        <main>
+            <h1><%= user.profile.name %> </h1>
+            <p class="fs-5 col-md-8" style="font-weight: bold;">
+                <%= user.profile.category %> @ 
+                <% if(user.profile.category == 'c') %> 
+                <%= user.profile.course %> 
+            </p>
+            <p class="fs-5 col-md-8">
+                <%= user.profile.uid %> <br>
+                <%= user.profile.section %> <br>
+            </p>
+
+            <div class="mb-5">
+                <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in touch</a>
             </div>
-            <div class="card-body">
-                <form action="/signup" method="post">
-                    <div class="input-group mb-3">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                      </div>
-                    <button class="btn btn-outline-primary" type="submit">Register</button>
-                </form>
+
+            <hr class="col-3 col-md-2 mb-5">
+
+            <div class="row g-5">
+                <div class="col-md-6">
+                    <h2>Starter projects</h2>
+                    <p>Ready to beyond the starter template? Check out these open source projects that you can quickly
+                        duplicate to a new GitHub repository.</p>
+                    <ul class="icon-list">
+                        <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener"
+                                target="_blank">Bootstrap npm starter</a></li>
+                        <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6">
+                    <h2>Guides</h2>
+                    <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
+                    <ul class="icon-list">
+                        <li><a href="/docs/5.1/getting-started/introduction/">Bootstrap quick start guide</a></li>
+                        <li><a href="/docs/5.1/getting-started/webpack/">Bootstrap Webpack guide</a></li>
+                        <li><a href="/docs/5.1/getting-started/parcel/">Bootstrap Parcel guide</a></li>
+                        <li><a href="/docs/5.1/getting-started/contribute/">Contributing to Bootstrap</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </main>
+        <footer class="pt-5 my-5 text-muted border-top">
+            Created by the Bootstrap team &middot; &copy; 2021
+        </footer>
     </div>
 
-    <script src="./js/bootstrap.bundle.min.js"
+
+    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+
+
 </body>
 
 </html>
