Relational Db ready

--- a/public/main copy.html
+++ b/public/main copy.html
@@ -193,7 +193,7 @@
                         </svg>
                     </a>
                     <a class="nav-link" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bell" <svg
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-bell"
                             xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-bell" viewBox="0 0 16 16">
                             <path
@@ -270,74 +270,7 @@
             </a>
         </nav>
 
-        <div class="container col-lg-12" style="max-width: 730px;">
 
-            <div class="pageHeading">
-                <h1>Certificate Registration</h1>
-            </div>
-
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" name="full_name" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Category</label>
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option selected>Choose...</option>
-                        <option value="s">Student</option>
-                        <option value="t">Class Mentor</option>
-                    </select>
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">UID (for students) or E-Code (for class
-                        mentors)</label>
-                    <input type="text" class="form-control" name="uid" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">CU Mail</label>
-                    <input type="text" class="form-control" name="cu-mail" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Personal Mail</label>
-                    <input type="text" class="form-control" name="personal-mail" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Section</label>
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option selected>Choose...</option>
-                        <option value="a">A</option>
-                        <option value="b">B</option>
-                        <option value="c">C</option>
-                    </select>
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" name="cnfrmpassword" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                </div>
-
-                <div class="ms-auto me-auto" style="width: fit-content;">
-                    <button class="btn btn-primary" id="btnSubmit" type="submit">Submit</button>
-                </div>
-            </form>
-        </div>
 
     </div>
 
