--- a/public/main.html
+++ b/public/main.html
@@ -20,15 +20,13 @@
         </header>
 
         <main>
-            <h1><%= user.profile.name %> </h1>
+            <h1> user.profile.name </h1>
             <p class="fs-5 col-md-8" style="font-weight: bold;">
-                <%= user.profile.category %> @ 
-                <% if(user.profile.category == 'c') %> 
-                <%= user.profile.course %> 
+                 user.profile.category @ user.profile.course 
             </p>
             <p class="fs-5 col-md-8">
-                <%= user.profile.uid %> <br>
-                <%= user.profile.section %> <br>
+                 user.profile.uid <br>
+                 user.profile.section <br>
             </p>
 
             <div class="mb-5">
@@ -38,25 +36,14 @@
             <hr class="col-3 col-md-2 mb-5">
 
             <div class="row g-5">
-                <div class="col-md-6">
-                    <h2>Starter projects</h2>
+                <div class="col-md-10">
+                    <h2>Certificates</h2>
                     <p>Ready to beyond the starter template? Check out these open source projects that you can quickly
                         duplicate to a new GitHub repository.</p>
                     <ul class="icon-list">
                         <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener"
                                 target="_blank">Bootstrap npm starter</a></li>
                         <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
-                    </ul>
-                </div>
-
-                <div class="col-md-6">
-                    <h2>Guides</h2>
-                    <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
-                    <ul class="icon-list">
-                        <li><a href="/docs/5.1/getting-started/introduction/">Bootstrap quick start guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/webpack/">Bootstrap Webpack guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/parcel/">Bootstrap Parcel guide</a></li>
-                        <li><a href="/docs/5.1/getting-started/contribute/">Contributing to Bootstrap</a></li>
                     </ul>
                 </div>
             </div>
