Student interface ready

--- a/public/main.html
+++ b/public/main.html
@@ -14,19 +14,19 @@
 
     <div class="col-lg-8 mx-auto p-3 py-md-5">
         <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <img class="rounded-circle profilePic" src="./images/253852115_369284928277098_6803301368560095943_n.jpg" alt=""
-                    srcset="">
+            <img class="rounded-circle profilePic" src="./images/253852115_369284928277098_6803301368560095943_n.jpg"
+                alt="" srcset="">
 
         </header>
 
         <main>
             <h1> user.profile.name </h1>
             <p class="fs-5 col-md-8" style="font-weight: bold;">
-                 user.profile.category @ user.profile.course 
+                user.profile.category @ user.profile.course
             </p>
             <p class="fs-5 col-md-8">
-                 user.profile.uid <br>
-                 user.profile.section <br>
+                user.profile.uid <br>
+                user.profile.section <br>
             </p>
 
             <div class="mb-5">
@@ -37,20 +37,20 @@
 
             <div class="row g-5">
                 <div class="col-md-10">
-                    <h2>Certificates</h2>
-                    <p>Ready to beyond the starter template? Check out these open source projects that you can quickly
-                        duplicate to a new GitHub repository.</p>
+                    <h2 class="mb-3">Certificates</h2>
                     <ul class="icon-list">
-                        <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener"
-                                target="_blank">Bootstrap npm starter</a></li>
-                        <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+                        <li>
+                            <h5>
+                                credentialName
+                            </h5>
+                            <p class="text-muted">
+                                - credentialSource
+                            </p>
+                        </li>
                     </ul>
                 </div>
             </div>
         </main>
-        <footer class="pt-5 my-5 text-muted border-top">
-            Created by the Bootstrap team &middot; &copy; 2021
-        </footer>
     </div>
 
 
