--- a/public/main.html
+++ b/public/main.html
@@ -12,47 +12,63 @@
 
 <body>
 
-    <div class="col-lg-8 mx-auto p-3 py-md-5">
-        <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <img class="rounded-circle profilePic" src="./images/253852115_369284928277098_6803301368560095943_n.jpg"
-                alt="" srcset="">
 
-        </header>
-
-        <main>
-            <h1> user.profile.name </h1>
-            <p class="fs-5 col-md-8" style="font-weight: bold;">
-                user.profile.category @ user.profile.course
-            </p>
-            <p class="fs-5 col-md-8">
-                user.profile.uid <br>
-                user.profile.section <br>
-            </p>
-
-            <div class="mb-5">
-                <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Get in touch</a>
+    <div class="Dashboard">
+        <nav class="navbar navbar-light bg-light mt-1 mb-2">
+            <div class="container-fluid">
+                <h1 class="navbar-brand ms-auto me-auto mb-0 h1" style="text-align: center;">20 AIML - A</h1>
             </div>
+        </nav>
 
-            <hr class="col-3 col-md-2 mb-5">
+        <div class="row mt-2">
 
-            <div class="row g-5">
-                <div class="col-md-10">
-                    <h2 class="mb-3">Certificates</h2>
-                    <ul class="icon-list">
-                        <li>
-                            <h5>
-                                credentialName
-                            </h5>
-                            <p class="text-muted">
-                                - credentialSource
-                            </p>
-                        </li>
-                    </ul>
+            <a href="#" class="cardLink col-sm-4">
+                <div class="card topCards">
+                    <div class="card-body">
+                        <h3 class="card-title">Total Students</h3>
+                        <h1>69 </h1>
+                    </div>
                 </div>
-            </div>
-        </main>
-    </div>
+            </a>
 
+            <a href="#" class="cardLink col-sm-4">
+                <div class="card topCards">
+                    <div class="card-body">
+                        <h3 class="card-title">Certifications Registered</h3>
+                        <h1>69 </h1>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#" class="cardLink col-sm-4">
+                <div class="card topCards">
+                    <div class="card-body">
+                        <h3 class="card-title">Achievements Registered</h3>
+                        <h1>69 </h1>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-sm-4 mt-2">
+                <a href="/professional-society-registrations" class="btn btn-primary col-12">View Entries</a>
+            </div>
+            <div class="col-sm-4 mt-2">
+                <a href="#" class="btn btn-primary col-12">Download Entries</a>
+            </div>
+            <div class="col-sm-4 mt-2">
+                <a href="#" class="btn btn-primary col-12">Mail</a>
+            </div>
+        </div>
+
+        <div class="container-fluid mt-5cre col-md-6">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
 
     <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
