--- a/main.html
+++ b/main.html
@@ -1,37 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mentor Dashboard</title>
+    <link rel="stylesheet" href="./public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
-<style>
-    ul{
-        list-style: none;
-        width: fit-content;
-    }
-
-    li{
-        padding: 15px 10px;
-        border: 1px solid black;
-        border-bottom: 0;
-    }
-    #lastitem{
-        border-bottom: 1px solid black;
-    }
-
-    li:hover{
-        color: blue;
-    }
-
-</style>
-
 <body>
-    <ul>
-        <li>Lakshay loves Kanika</li>
-        <li id="lastitem">Harsh loves Lakshay</li>
-    </ul>
+    <!-- Side Bar -->
+
+    <!-- Body -->
+    <div class="bodyContainer">
+
+        <!-- Navbar -->
+
+        <div class="Dashboard">
+
+            <div class="row">
+            <div class="card mt-4 ms-4 bg-li col-sm-3">
+                <a class="cardLink" href="">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ms-auto me-auto">
+                            <img src="./public/images/253852115_369284928277098_6803301368560095943_n.jpg"
+                                style="height: 200px; width: 200px;" class="card-img-top ms-auto me-auto" alt="...">
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="card-title mt-2 h3">
+                                <%= student.profile.name %>
+                            </h5>
+                            <p class="card-text">
+                                <%= student.uid %>
+                            </p>
+                        </li>
+                    </ul>
+                </a>
+            </div>
+
+            <div class="card mt-4 ms-4 bg-li col-sm-3">
+                <a class="cardLink" href="">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ms-auto me-auto">
+                            <img src="./public/images/253852115_369284928277098_6803301368560095943_n.jpg"
+                                style="height: 200px; width: 200px;" class="card-img-top ms-auto me-auto" alt="...">
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="card-title mt-2 h3">
+                                <%= student.profile.name %>
+                            </h5>
+                            <p class="card-text">
+                                <%= student.uid %>
+                            </p>
+                        </li>
+                    </ul>
+                </a>
+            </div>
+
+            <div class="card mt-4 ms-4 bg-li col-sm-3">
+                <a class="cardLink" href="">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ms-auto me-auto">
+                            <img src="./public/images/253852115_369284928277098_6803301368560095943_n.jpg"
+                                style="height: 200px; width: 200px;" class="card-img-top ms-auto me-auto" alt="...">
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="card-title mt-2 h3">
+                                <%= student.profile.name %>
+                            </h5>
+                            <p class="card-text">
+                                <%= student.uid %>
+                            </p>
+                        </li>
+                    </ul>
+                </a>
+            </div>
+
+            <div class="card mt-4 ms-4 bg-li col-sm-3">
+                <a class="cardLink" href="">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ms-auto me-auto">
+                            <img src="./public/images/253852115_369284928277098_6803301368560095943_n.jpg"
+                                style="height: 200px; width: 200px;" class="card-img-top ms-auto me-auto" alt="...">
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="card-title mt-2 h3">
+                                <%= student.profile.name %>
+                            </h5>
+                            <p class="card-text">
+                                <%= student.uid %>
+                            </p>
+                        </li>
+                    </ul>
+                </a>
+            </div>
+
+            <div class="card mt-4 ms-4 bg-li col-sm-3">
+                <a class="cardLink" href="">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ms-auto me-auto">
+                            <img src="./public/images/253852115_369284928277098_6803301368560095943_n.jpg"
+                                style="height: 200px; width: 200px;" class="card-img-top ms-auto me-auto" alt="...">
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="card-title mt-2 h3">
+                                <%= student.profile.name %>
+                            </h5>
+                            <p class="card-text">
+                                <%= student.uid %>
+                            </p>
+                        </li>
+                    </ul>
+                </a>
+            </div>
+        </div>
+
+
+        </div>
+
+    </div>
+
+    <script src="./public/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="./public/js/script.js"></script>
 </body>
+
 </html>
